gitops/ombi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  labels:
    app: ombi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: ghcr.io/linuxserver/ombi:4.60.16-development
        ports:
        - containerPort: 3579
        volumeMounts:
        - name: ombi-config
          mountPath: /config
      volumes:
      - name: ombi-config
        persistentVolumeClaim:
          claimName: ombi-config
