gitops/ombi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi
spec:
  ports:
  - name: app
    port: 80
    targetPort: 3579
    protocol: TCP
    appProtocol: http
  selector:
    app: ombi
