gitops/ombi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ombi
  namespace: ombi
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-ombi
  hostnames:
  - ombi.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ombi
      port: 80
