gitops/ombi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  namespace: ombi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sync.lt
    - ombi.sync.lt
    secretName: ombi-letsencrypt
  rules:
  - host: ombi.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ombi
            port:
              name: app
  - host: ombi.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ombi
            port:
              name: app
